--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,8 @@ DB_PORT=3306
 DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
+DB_CHARSE=utf8mb4
+DB_COLLATION=utf8mb4_general_ci
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
